tests/neg/semantic_arrays_unsupported.baa
// EXPECT: المصفوفات غير مدعومة
صحيح الرئيسية() {
    صحيح قائمة[١].
    إرجع ٠.
}

